--- a/client/css/questions.less
+++ b/client/css/questions.less
@@ -63,8 +63,15 @@ blockquote {
 //    width: 640px;
 //  }
 //}
-ul.nav.nav-stacked > li > a {
-  padding: 7px 13px;
+ul.nav.sp-nav {
+  height: 34px;
+}
+ul.nav.sp-nav > li {
+  height: 34px;
+}
+ul.nav.sp-nav.nav-stacked > li > a {
+  padding: 7px 7px;
+  height: 34px;
 }
 
 .alert-box {
